src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-ofT-dwU-dhP0.5-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: U\ndefault window height: P0.5\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 360, bounds: 1280 × 720, states: []
size: 1 × 360, bounds: 1280 × 720, states: [Activated]
